syntax = "proto3";

option java_package = "com.twidere.twiderex.preferences.proto";
option java_multiple_files = true;

message DisplayPreferences {
  enum AvatarStyle {
    Round = 0;
    Square = 1;
  }

  enum AutoPlayback {
    Auto = 0;
    Always = 1;
    Off = 2;
  }

  bool useSystemFontSize = 1;
  float fontScale = 2;
  AvatarStyle avatarStyle = 3;
  bool mediaPreview = 4;
  AutoPlayback autoPlayback = 5;
}